parser/testdata/resource_sqldb_cross_service.txt
! parse
err 'cannot reference resource svca.Moo outside the service'

-- svca/svca.go --
package svca

import (
    "context"

    "encore.dev/storage/sqldb"
)

var Moo = sqldb.Named("moo")

//encore:api public
func Foo(ctx context.Context) error {
    return nil
}
-- svcb/svcb.go --
package svcb

import (
    "context"

    "test/svca"
)

//encore:api public
func Bar(ctx context.Context) error {
    _ = svca.Moo.Query()
    return nil
}
-- want: errors --

── Error ──────────────────────────────────────────────────────────────────────────────────[E9999]──

internal compiler error: unknown resource (path "SQLDatabase:moo")

    ╭─[ svca/svca.go:9:5 ]
    │
  7 │ )
  8 │
  9 │ var Moo = sqldb.Named("moo")
    ⋮     ────────────────────────
 10 │
 11 │ //encore:api public
────╯




── Error ──────────────────────────────────────────────────────────────────────────────────[E9999]──

internal compiler error: resource reference not found: svca.Moo

    ╭─[ svcb/svcb.go:11:9 ]
    │
  9 │ //encore:api public
 10 │ func Bar(ctx context.Context) error {
 11 │     _ = svca.Moo.Query()
    ⋮         ────────────────
 12 │     return nil
 13 │ }
────╯
